# ZeroClaw-Android

./: .gitignore  .history  README.md  add_logs_correctly.py  add_minimal_logs.py  add_tool_logs.py  architecture_preview.html  architecture_summary.md  build_zeroclaw.sh  find_lines.py  fix_all_logs.py  fix_logs.py  mcp_integration_summary.md  modify_loop.py  tool_execution_workflow_improvements.md  workflow_scenarios_summary.md
.github/workflows/: ci.yml
app/: build.gradle.kts
app/src/androidTest/java/com/zeroclaw/android/screen/: DoctorScreenTest.kt  OnboardingScreenTest.kt  SettingsScreenTest.kt  TerminalScreenTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/zeroclaw/android/: ZeroClawApplication.kt
config/detekt/: detekt.yml
docs/plans/: 2026-02-26-onboarding-redesign-design.md  2026-02-28-live-agent-session-design.md  2026-02-28-live-agent-session-plan.md
lib/: build.gradle.kts
maestro/flows/: onboarding.yaml
maestro/flows/real-daemon/: bad-endpoint.yaml  conversation.yaml  daemon-boot.yaml  restart-cycle.yaml
maestro/subflows/: complete-onboarding.yaml
scripts/: test-fresh-install.sh  test-local-all.sh  test-real-daemon.sh  test-uninstall-reinstall.sh  test-upgrade.sh
scripts/hooks/: pre-commit-test.sh  pre-release-test.sh
zeroclaw-android/zeroclaw-ffi/: Cargo.toml
zeroclaw-android/zeroclaw-ffi/src/: cost.rs  cron.rs  events.rs  gateway_client.rs  lib.rs  mcp_client.rs  mcp_tools.rs  provider_info.rs  repl.rs  runtime.rs  session.rs  skills.rs  streaming.rs  tools_browse.rs  url_helpers.rs  vision.rs
(+53 files in other folders)
